[HxAutosuggest] Validation messages overlay fix - z-indexes

--- a/Havit.Blazor.Components.Web.Bootstrap/Forms/Autosuggests/Internal/HxAutosuggestInputInternal.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Forms/Autosuggests/Internal/HxAutosuggestInputInternal.razor.css
@@ -2,16 +2,6 @@
     position: relative;
 }
 
-/* Unfocused input z-index: 4 same as Bootstrap form-controls */
-.input-group .hx-autosuggest-input.is-invalid:not(:focus) {
-    z-index: 4;
-}
-
-/* Bring the "active" form control to the top of surrounding elements */
-.input-group .hx-autosuggest-input:focus {
-    z-index: 5;
-}
-
 .form-control.is-invalid {
     background-position: center right 2.5rem;
     padding-right: 4.125rem;
