--- a/Havit.Blazor.Components.Web.Bootstrap/Forms/Autosuggests/Internal/HxAutosuggestInternal.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Forms/Autosuggests/Internal/HxAutosuggestInternal.razor.css
@@ -6,7 +6,10 @@
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    z-index: 5;
+}
+
+.hx-autosuggest-input-wrapper:focus-within {
+	z-index: 6;
 }
 
 .input-group .hx-autosuggest-input-wrapper {
@@ -32,7 +35,4 @@
 
 .hx-autosuggest-input-icon div[role="button"]:not(:hover) ::deep .hx-icon {
     opacity: var(--hx-autosuggest-input-close-icon-opacity);
-}
-::deep .form-floating > label {
-    z-index: 20;
 }
